removed cropper zoom and using image scaling to show entire image. Click on modal backdrop during crop will no longer close modal

--- a/public/less/generics.less
+++ b/public/less/generics.less
@@ -145,7 +145,8 @@
 
 #crop-picture-modal {
 	#cropped-image {
-		max-width: 100%;
+		max-width: 50%;
+		max-height: 350px;
 	}
 	
 	.cropper-container.cropper-bg {
